--- a/facebook.yml
+++ b/facebook.yml
@@ -4,7 +4,7 @@ Parent: "66b5637d-2052-48bc-b70e-ba5356c5d4e6"
 Template: "f1828a2c-7e5d-4bbd-98ca-320474871548"
 Path: /sitecore/media library/Dimensional/System/share/facebook
 DB: master
-SharedFields:
+SharedFieldsa:
 - ID: "06d5295c-ed2f-4a54-9bf2-26228d113318"
   Hint: __Icon
   Value: "-/media/F5E77FD8179340ACB9B29B495E9FE93B.ashx?h=16&thn=1&w=16"
