--- a/facebook.yml
+++ b/facebook.yml
@@ -1,6 +1,6 @@
 ---
 ID: "f5e77fd8-1793-40ac-b9b2-9b495e9fe93b"
-Parent: "66b5637d-2052-48bc-b70e-ba5356c5d4e6"
+Parent: "66b5637d-2052-48bc-b70e-ba5356c5d4e6s"
 Template: "f1828a2c-7e5d-4bbd-98ca-320474871548"
 Path: /sitecore/media library/Dimensional/System/share/facebooks
 DB: masters
