--- a/.github/workflows/cortex-cloud-scan.yml
+++ b/.github/workflows/cortex-cloud-scan.yml
@@ -10,7 +10,7 @@ on:
 env:
   CORTEX_API_KEY: ${{secrets.CORTEX_API_KEY}}
   CORTEX_API_KEY_ID: ${{secrets.CORTEX_API_KEY_ID}}
-  CORTEX_API_URL: https://api-tac-c3.xdr.eu.paloaltonetworks.com
+  CORTEX_API_URL: https://api-tac-c1.xdr.us.paloaltonetworks.com
   CORTEX_CLI_VERSION: 0.11.0
   
 jobs:
